--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,6 @@
 $f-button: #8a4fc6;
 $green: #7ed321;
+
 $f-dark: #23005c;
 $text: #666666;
+$white: #fff;
